# packet2vec

./: .gitignore  LICENSE  README.md  README_Boost.md  common.py  main.py  packet2vec_config.yml  requirements.txt
ParallelPcap/: CMakeLists.txt
ParallelPcap/ParallelPcap/: ByteManipulations.hpp  CountDictionary.hpp  DARPA2009.hpp  ISOT.hpp  Packet.hpp  Packet2Vec.hpp  PacketInfo.hpp  Pcap.hpp  ReadPcap.hpp  TestPcap.hpp  Time.hpp  Util.hpp
ParallelPcap/PythonExtensions/: ParallelPcapExt.cpp
ParallelPcap/test/: TestISOT.cpp  TestTime.cpp
ParallelPcap/test/resources/: sample_isot_labels.csv
classifiers/: test.py  train.py
data/darpa2009/: DARPA2009_groundtruth.csv  README.md
embeddings/: helpers.py  train.py  word2vec.py
pcaps/: features.py  process.py
plot/: plot.py
